Closed Bug 1859465 Opened 7 months ago Closed 7 months ago

Crash in [@ nsMsgDatabase::MarkThreadWatched] via nsImapMailFolder::ApplyFilterHit

Categories

(Thunderbird :: General, defect)

Thunderbird 115
x86
All
defect

Tracking

(thunderbird_esr115 fixed)

RESOLVED FIXED
120 Branch
Tracking Status
thunderbird_esr115 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

#60 crash for 115.3.2. All OS.

Crash report: https://crash-stats.mozilla.org/report/index/929d85c3-bb92-45c7-893c-d63960231017

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  nsMsgDatabase::MarkThreadWatched  mailnews/db/msgdb/src/nsMsgDatabase.cpp:2111
1  xul.dll  nsImapMailFolder::ApplyFilterHit  mailnews/imap/src/nsImapMailFolder.cpp:3426
2  xul.dll  nsMsgFilterList::ApplyFiltersToHdr  mailnews/search/src/nsMsgFilterList.cpp:349
3  xul.dll  nsImapMailFolder::NormalEndMsgWriteStream  mailnews/imap/src/nsImapMailFolder.cpp:4391
4  xul.dll    mailnews/imap/src/nsSyncRunnableHelpers.cpp:184
5  xul.dll  mozilla::RunnableTask::Run  xpcom/threads/TaskController.cpp:555
6  xul.dll  mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:879
7  xul.dll  mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal  xpcom/threads/TaskController.cpp:702
8  xul.dll  mozilla::TaskController::ProcessPendingMTTask  xpcom/threads/TaskController.cpp:491
9  xul.dll  mozilla::TaskController::TaskController::<lambda_4>::operator const  xpcom/threads/TaskController.cpp:218
Flags: needinfo?(mkmelin+mozilla)

90% of crashes uptime <5 minutes

Version: unspecified → Thunderbird 115
Flags: needinfo?(mkmelin+mozilla)
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Target Milestone: --- → 120 Branch

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/3376540d7f17
Fix crash in [@ nsMsgDatabase::MarkThreadWatched] via nsImapMailFolder::ApplyFilterHit. r=benc

Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED

Comment on attachment 9358865 [details]
Bug 1859465 - Fix crash in [@ nsMsgDatabase::MarkThreadWatched] via nsImapMailFolder::ApplyFilterHit. r=benc

[Approval Request Comment]
User impact if declined: may crash
Testing completed (on c-c, etc.): c-c, beta
Risk to taking this patch (and alternatives if risky): safe

Attachment #9358865 - Flags: approval-comm-esr115?

Comment on attachment 9358865 [details]
Bug 1859465 - Fix crash in [@ nsMsgDatabase::MarkThreadWatched] via nsImapMailFolder::ApplyFilterHit. r=benc

[Triage Comment]
Approved for esr115

Attachment #9358865 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: