Bug 1859465 - Fix crash in [@ nsMsgDatabase::MarkThreadWatched] via nsImapMailFolder::ApplyFilterHit. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D191184

--HG--
extra : rebase_source : 75ef1413a34b5f8d8cee29b70b723f31181afcc1